front-end/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tourist-front-end-service
spec:
  selector:
    app: tourist-front-end
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
